zebra-rpc/src/methods/tests/snapshots/z_get_treestate_unparsable_hash_or_height@custom_testnet.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: rsp
---
{
  "Err": {
    "code": 0,
    "message": "parse error: could not convert the input string to a hash or height"
  }
}
