zebra-rpc/src/methods/tests/snapshots/z_validate_address_invalid@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot/get_block_template_rpcs.rs
expression: z_validate_address
---
{
  "isvalid": false
}
